fixed bug on mobile where the team name would overflow

--- a/api/static/css/mainstyle-mobile.css
+++ b/api/static/css/mainstyle-mobile.css
@@ -339,7 +339,7 @@ a {
     z-index: 6;
 }
 .top-bar-container {
-    font-size: 70px;
+    font-size: 60px;
     text-align: right;
     font-family: 'Teko', sans-serif;
     color: #ffffff;
